[package]
name = "dumbbit"
version = "0.1.0"
authors = ["Kristoffer Andersson <kod.kristoff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.39"
async-std = { version = "1.9.0", features = ["attributes"] }
tide = "0.16.0"
